패키지화 및 주석

--- a/Navigation/app/src/main/res/layout/activity_destination.xml
+++ b/Navigation/app/src/main/res/layout/activity_destination.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.woga1.navigation.Activity.DestinationActivity">
+    tools:context="com.example.woga1.navigation.SaveData.DestinationActivity">
 
     <ListView
         android:id="@+id/listview1"
