--- a/Navigation/app/src/main/res/layout/activity_detail_search.xml
+++ b/Navigation/app/src/main/res/layout/activity_detail_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.woga1.navigation.Activity.DetailSearchActivity">
+    tools:context="com.example.woga1.navigation.Search.DetailSearchActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
