--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.woga1.navigation.Activity.NavigationActivity">
+    tools:context="com.example.woga1.navigation.Navigation.NavigationActivity">
 
 
 
