--- a/Navigation/app/src/main/res/layout/activity_main.xml
+++ b/Navigation/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="#4C4C4C"
+        android:background="#0e3f66"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/notificationbutton" />
+                android:background="@mipmap/notificationbutton" />
         </LinearLayout>
 
     </LinearLayout>
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="#4C4C4C"
+        android:background="#0e3f66"
         android:layout_toEndOf="@+id/destination"
         android:orientation="horizontal"
         android:layout_marginBottom="5dp">
