--- a/Navigation/app/src/main/res/layout/activity_poi.xml
+++ b/Navigation/app/src/main/res/layout/activity_poi.xml
@@ -17,7 +17,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#4d4d4d"
+            android:background="#0e3f66"
             android:gravity="center"
             android:text="주유소/충전소"
             android:textColor="#C90000"
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#4d4d4d"
+            android:background="#0e3f66"
             android:gravity="center"
             android:text="음식점"
             android:textColor="#FFFFFF"
@@ -39,7 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#4d4d4d"
+            android:background="#0e3f66"
             android:gravity="center"
             android:text="마트/편의점"
             android:textColor="#FFFFFF"
