--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -160,10 +160,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="#a62c23"
+            android:background="#0e3f66"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:textColor="#FFFFFF"
+            android:textColor="#ff9600"
             android:text="안내시작" />
 
 
