--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -61,7 +61,7 @@
         android:background="@drawable/secondinform" >
 
         <ImageView
-            android:id="@+id/secondDirectionSign"
+            android:id="@+id/nextDirectionSign"
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:background="@drawable/turnright"
@@ -71,7 +71,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="11dp" />
         <TextView
-            android:id="@+id/secondDistanceText"
+            android:id="@+id/nextDistanceText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="78m"
