--- a/Navigation/app/src/main/res/layout/activity_poi.xml
+++ b/Navigation/app/src/main/res/layout/activity_poi.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -46,14 +45,11 @@
             android:textStyle="bold" />
 
     </LinearLayout>
-    <fragment
+    <FrameLayout
         android:id="@+id/listFragment"
         android:name="com.example.woga1.navigation.Search.GasStationFragment"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout = "@layout/fragment_gas_station"
-
-        />
+        tools:layout = "@layout/fragment_gas_station" />
 
 </LinearLayout>
