--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -382,5 +383,12 @@
             <!--android:scaleType="fitXY"-->
             <!--android:onClick="btnZoomIn"/>-->
     <!--</FrameLayout>-->
+    <view
+        android:id="@+id/plot"
+        class="com.example.woga1.navigation.SoundAnalyze.AnalyzerGraphic"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        custom:cutoffDb="-25"
+        custom:sampleRate="16000" />
 
 </RelativeLayout>
