--- a/Navigation/app/src/main/res/layout/activity_notice.xml
+++ b/Navigation/app/src/main/res/layout/activity_notice.xml
@@ -5,14 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.woga1.navigation.SaveData.NoticeActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="425dp"
         android:text="공지사항 없음"
         android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="50dp"
         android:gravity="center"/>
+
+    <Button
+        android:id="@+id/testButton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Button" />
 
 </LinearLayout>
