--- a/Navigation/app/src/main/res/layout/activity_stop_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_stop_navigation.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#eeeeee"
+    android:background="#F4F4F4"
     android:orientation="vertical"
-    android:layout_width="300dp"
+    android:layout_width="280dp"
     android:layout_height="wrap_content"
     tools:context="com.example.woga1.navigation.Navigation.StopNavigation">
 
@@ -14,11 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="알림"
-            android:textSize="20sp"
+            android:text="수고하셨습니다!"
+            android:textSize="15dp"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:gravity="center"
-            android:background="#eeeeee"
+            android:background="#F4F4F4"
             android:layout_width="match_parent"
             android:layout_height="53dp" />
     </LinearLayout>
@@ -28,15 +29,17 @@
     <LinearLayout
         android:padding="24dp"
         android:orientation="vertical"
+        android:background="#F4F4F4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/txtText"
-            android:textSize="15sp"
-            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textColor="#0e3f66"
             android:alpha="0.87"
-            android:text="경로를 취소하시겠습니까?"
+            android:text="목적지에 도착했습니다."
             android:gravity="center"
+            android:textStyle="bold"
             android:layout_marginBottom="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -53,20 +56,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:background="#F4F4F4"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/noButton"
-            android:layout_width="0dp"
-            android:layout_height="53dp"
-            android:layout_weight="1"
-            android:background="#00000000"
-            android:gravity="center"
-            android:onClick="mOnClose"
-            android:padding="16dp"
-            android:text="아니오"
-            android:textColor="#000000"
-            android:textSize="15sp" />
+        <!--<Button-->
+            <!--android:id="@+id/noButton"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="53dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="#00000000"-->
+            <!--android:gravity="center"-->
+            <!--android:onClick="mOnClose"-->
+            <!--android:padding="16dp"-->
+            <!--android:text="아니오"-->
+            <!--android:textColor="#000000"-->
+            <!--android:textSize="15sp" />-->
 
         <Button
             android:id="@+id/finishButton"
@@ -77,7 +81,7 @@
             android:gravity="center"
             android:onClick="mOnClose"
             android:padding="16dp"
-            android:text="예"
+            android:text="닫기"
             android:textColor="#000000"
             android:textSize="15sp" />
     </LinearLayout>
