--- a/Navigation/app/src/main/res/layout/activity_notice.xml
+++ b/Navigation/app/src/main/res/layout/activity_notice.xml
@@ -10,16 +10,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="425dp"
-        android:text="공지사항 없음"
+        android:text="블루투스 동작 테스트"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:textSize="50dp"
+        android:textSize="30dp"
+        android:background="#F4F4F4"
         android:gravity="center"/>
 
     <Button
         android:id="@+id/testButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Button" />
+        android:background="#0e3f66"
+        android:text="클릭"
+        android:textSize="20dp"
+        android:textColor="#ff9600"
+        android:textStyle="bold"/>
 
 </LinearLayout>
